--- a/The_Band/Assets/css/style.css
+++ b/The_Band/Assets/css/style.css
@@ -93,7 +93,7 @@
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/The_Band/Assets/image/slider1.jpg) top center / cover no-repeat;
+    background: url(/HTML-Learn/Font-End/The_Band/Assets/image/slider1.jpg) top center / cover no-repeat;
     position: relative;
 }
 
@@ -122,6 +122,35 @@
     font-size: 15px;
 }
 
-#content {}
+#content {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content #content-section {
+    padding: 64px 0;
+}
+
+#content-section .content-heading {
+    font-size: 30px;
+    text-align: center;
+    margin: 10px 0;
+    font-weight: 300;
+    letter-spacing: 4px;
+}
+
+#content-section .content-sub-heading {
+    font-size: 15px;
+    text-align: center;
+    margin: 15px 0;
+    font-style: italic;
+    opacity: 0.6;
+}
+
+#content-section .about-text {
+    text-align: justify;
+    line-height: 1.4;
+}
 
 #footer {}
