--- a/The_Band/Assets/css/style.css
+++ b/The_Band/Assets/css/style.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.clear {
+    clear: both;
+}
+
+.text-white {
+    color: #fff;
+}
+
 #header {
     height: 46px;
     background-color: #000;
@@ -93,7 +105,7 @@
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/HTML-Learn/Font-End/The_Band/Assets/image/slider1.jpg) top center / cover no-repeat;
+    background: url(/HTML-Learn/Font-End/The_Band/Assets/image/Slider/slider1.jpg) top center / cover no-repeat;
     position: relative;
 }
 
@@ -122,17 +134,16 @@
     font-size: 15px;
 }
 
-#content {
+#content {}
+
+#content .content-section {
     width: 800px;
+    padding: 64px 0;
     margin-left: auto;
     margin-right: auto;
 }
 
-#content #content-section {
-    padding: 64px 0;
-}
-
-#content-section .content-heading {
+.content-section .content-heading {
     font-size: 30px;
     text-align: center;
     margin: 10px 0;
@@ -140,7 +151,7 @@
     letter-spacing: 4px;
 }
 
-#content-section .content-sub-heading {
+.content-section .content-sub-heading {
     font-size: 15px;
     text-align: center;
     margin: 15px 0;
@@ -148,9 +159,70 @@
     opacity: 0.6;
 }
 
-#content-section .about-text {
+.content-section .about-text {
     text-align: justify;
     line-height: 1.4;
+}
+
+.member-list {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.member-list .member-item {
+    float: left;
+    width: calc(100% / 3);
+}
+
+.member-name {
+    margin: 15px 0;
+}
+
+.member-list .member-img {
+    width: 154px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#content .tour-section {
+    background-color: #000;
+}
+
+#content .tour-list {
+    background-color: #fff;
+    list-style-type: none;
+}
+
+.tour-list li {
+    color: #888;
+    padding: 14px 16px;
+    border-bottom: 2px solid #888;
+    font-size: 14px;
+}
+
+.tour-list .sold-out-ticket {
+    background-color: #f44336;
+    margin-left: 16px;
+    padding: 7px 9px;
+    color: #fff;
+}
+
+.tour-list .quality-ticket {
+    float: right;
+    color: #fff;
+    background-color: #000;
+    height: 24px;
+    width: 24px;
+    text-align: center;
+    line-height: 24px;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
 }
 
 #footer {}
